# cmake-c-project-template

./: CMakeLists.txt
